--- a/.gitignore
+++ b/.gitignore
@@ -3,25 +3,15 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
-# Node artifact files
-node_modules/
-dist/
-
-# Compiled Java class files
-*.class
+# python venv artifact files
+.venv
+env.local
 
 # Compiled Python bytecode
 *.py[cod]
 
 # Log files
 *.log
-
-# Package files
-*.jar
-
-# Maven
-target/
-dist/
 
 # JetBrains IDE
 .idea/
@@ -48,3 +38,9 @@ Thumbs.db
 *.mov
 *.wmv
 
+# DB files
+postgres_data/
+*.sqlite3
+
+# Django static collected files
+app/static_collected/*
